# sabikun

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/crates/gui/: .gitignore  Cargo.toml  Dioxus.toml
src/crates/gui/assets/styling/: main.css
src/crates/gui/src/: main.rs
src/crates/gui/src/components/: hero.rs  mod.rs  structured_content.rs
src/crates/schemas/: Cargo.toml
src/crates/schemas/src/: dictionary_index_schema.rs  iso_languages.rs  kanji_bank_meta_schema.rs  kanji_bank_schema.rs  main.rs  meta_schema.rs  schemas.rs  tag_bank_schema.rs  term_bank_meta_schema.rs  term_bank_schema.rs
src/crates/yomi_dict_db/: Cargo.toml
src/crates/yomi_dict_db/src/: main.rs  yomi_dict_db.rs  yomitan_database.rs
src/schemas/: dictionary_index_schema.rs  iso_languages.rs  kanji_bank_meta_schema.rs  kanji_bank_schema.rs  mod.rs  tag_bank_schema.rs  term_bank_meta_schema.rs  term_bank_schema.rs
testzip/: index.json  kanjiinfo.json  simplified_kanji_bank_1.json  single_term_bank_1.json
