[package]
name = "yomidb"
version = "0.1.0"
edition = "2021"

[dependencies]
wana_kana = "4.0.0"
isolang = "2.4.0"

[workspace]
members = ["src/crates/schemas", "src/crates/gui", "src/crates/yomi_dict_db"]

[workspace.dependencies]
schemas = { path = "src/crates/schemas" }
gui = { path = "src/crates/gui" }
yomi_dict_db = { path = "src/crates/yomi_dict_db" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
