[package]
name = "yomi_dict_db"
version = "0.0.0"
edition = "2021"

[lib]
name = "yomi_dict_db"
path = "src/yomi_dict_db.rs"

[dependencies]
chrono = "0.4.39"
rusqlite = { version = "0.33.0", features = ["bundled", "chrono"] }
zip = "2.2.2"
schemas.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"